--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 }
         
         h3 {
-           
+           display: block;
             padding-top: 2rem;
             font-size: 3rem;
             text-align: left;
@@ -70,7 +70,7 @@
             margin-left: 0%;
           }
           50% {
-            margin-left: 292px;
+            margin-left: 280px;
           }
           100% {
             margin-left: 0%;
